--- a/growth-cat-castration.html
+++ b/growth-cat-castration.html
@@ -732,7 +732,7 @@
                         дадат метастази във вътрешните органи.</p>
                     <p>Друго състояние, срещано при некастрираните женски животни, е <strong>фалшивата
                             бременност</strong>, която понякога довежда и до възпаление на млечните жлези
-                        (<strong>мастит</strong>). Друг много често срещан проблем е <strong>пиометрата</strong> –
+                        (<strong>мастит</strong>). Друг много често срещан проблем е <strong>пиометрата</strong> -
                         представлява възпаление на матката, при което в нея се натрупва гной. Това състояние е
                         животозастрашаващо и се налага спешна оперативна намеса!</p>
 
