--- a/growth-cat-estrous-cycle.html
+++ b/growth-cat-estrous-cycle.html
@@ -714,16 +714,16 @@
                         започва около 5-12-месечна възраст, но началото му варира според породата, храненето и др.
                         <br>
                         Котките са <span class="fw800">полициклични</span>, което означава, че претърпяват няколко
-                        полови цикъла един след друг през цялата година. Една част от котките са <span class="fw800">сезоннополициклични</span> – те претърпяват няколко полови цикъла един след
+                        полови цикъла един след друг през цялата година. Една част от котките са <span class="fw800">сезоннополициклични</span> - те претърпяват няколко полови цикъла един след
                         друг през същия сезон. По време на този сезон продължителността на половия цикъл варира от 14 до
-                        21 дни, като той е пряко свързан с увеличаването на деня – по-дългите дни (при повечето котки те
+                        21 дни, като той е пряко свързан с увеличаването на деня - по-дългите дни (при повечето котки те
                         са с 12-14 часа дневна светлина) водят до секрецията на хормони, които стимулират естралния
                         цикъл да започне и да продължава, докато по-късите дни (при повечето котки те са с 10-12 часа
                         дневна светлина) водят до временното му прекъсване.
                         <br>
                         <img src="./img/growth/cat-daily-light.png" style="width: 80%;">
                         <br>
-                        В северното полукълбо този сезон е от февруари до септември, а в южното полукълбо – от септември
+                        В северното полукълбо този сезон е от февруари до септември, а в южното полукълбо - от септември
                         до февруари.
                         <br>
                         За разлика от кучетата, при котките овулацията е индуцирана, т. е. яйцеклетките се освобождават
@@ -731,7 +731,7 @@
                         се прекъсва.
                         <br>
                     </p>
-                    <ol>Половия цикъл при котката е уникален – има пет фази:
+                    <ol>Половия цикъл при котката е уникален - има пет фази:
                         <li><span class="fw800">Проеструс</span>: обикновено продължава 1 ден. През тази фаза котката
                             може да се прояви като по-гальовна, по-често да мяука или да има понижен апетит.
                             <br>
@@ -751,7 +751,7 @@
                         <li><span class="fw800">Интереструс</span>: това е периодът между два еструса, ако не настъпи
                             овулация, т. е. при липса на сексуален контакт между мъжката и женската котки.
                             Продължителността му е между 8-15 дни.</li>
-                        <li><span class="fw800">Диеструс</span> (още лутеална фаза) – продължава обикновено около 30
+                        <li><span class="fw800">Диеструс</span> (още лутеална фаза) - продължава обикновено около 30
                             дни. Ако натъпи овулация при котката, то тя навлиза в диеструс. Този период е след еструса и
                             се характеризира с високи нива на прогестерон при небременните котки, а при бременните котки
                             представлява началото на бременността.</li>
