--- a/growth-cat-orphan.html
+++ b/growth-cat-orphan.html
@@ -748,7 +748,7 @@
                         </p>
                         <p>
                             <span class="blue bold">Преценете</span> на каква възраст е котето, колко пъти на ден трябва
-                            да се храни и какво количество мляко да му се дава – обикновено във всяка кутия котешко
+                            да се храни и какво количество мляко да му се дава - обикновено във всяка кутия котешко
                             мляко има информация за тези въпроси.
                         </p>
                         <div class="italic">Линк към полезно видео: <a href="https://www.youtube.com/watch?v=1dH0uyboY2U&amp;ab_channel=KittenLady">тук</a></div>
@@ -794,7 +794,7 @@
                             1) Прехранване и недохранване
                         </h4>
                         <p>
-                            Прехранването може да резултира в диария, а недохранването – в дехидратация и ненаддаване на
+                            Прехранването може да резултира в диария, а недохранването - в дехидратация и ненаддаване на
                             тегло.
                             Изкуственото мляко може да бъде прекалено гъсто и затова новороденото да се нуждае от
                             допълнително течности. Затова може да се наложи изкуственото мляко да се разреди.
@@ -809,7 +809,7 @@
                         <ul>
                             <li>под 34.4°C веднага след раждането</li>
                             <li>35.6°C, когато котето е на 1-3 дневна възраст</li>
-                            <li>37.2°C – когато котето е на възраст 1 седмица.</li>
+                            <li>37.2°C - когато котето е на възраст 1 седмица.</li>
                         </ul>
                         <p>
                             При такова състояние то трябва да се затопли, като се затопля с по един градус на час! За да
