--- a/health-care-cat-deworming.html
+++ b/health-care-cat-deworming.html
@@ -707,7 +707,7 @@
                     <h2>Защо обезпаразитявам?</h2>
                     <p>
                         Колкото и малък да изглежда света, покрай Вас и Вашия любимец има и други същества, някои -
-                        видими, а други – незабележими и чакащи да намерят някой домашен питомник, от който може да се
+                        видими, а други - незабележими и чакащи да намерят някой домашен питомник, от който може да се
                         хранят, а именно говорим за паразитите.
                     </p>
                     <p>
@@ -737,9 +737,9 @@
                         здравето си.
                     </p>
                     <p>
-                        <span class="fw900 royal-blue">Домашните ни любимци са като малките деца</span> – разчитат на
+                        <span class="fw900 royal-blue">Домашните ни любимци са като малките деца</span> - разчитат на
                         нас да се грижим за тях, което не означава само да ги галим и гушкаме (за съжаление!), но и да
-                        ги защитаваме от неща, които ще им навредят – от паразитите.
+                        ги защитаваме от неща, които ще им навредят - от паразитите.
                     </p>
                     <p>
                         За да стане по-ясно какво представляват паразитите, Ви препоръчваме да прочетете по-надолу преди
@@ -775,8 +775,8 @@
                     <p>
                         <span class="fw900">Ушните</span> и <span class="fw900">кожните кърлежи</span> не са точно както
                         обикновените кърлежи, а са много по-дребни (те се виждат само под микроскоп). Ушните кърлежи
-                        причиняват ушна краста (отодектоза), а кожните кърлежи (саркопти, нотоедри и демодекс) –
-                        саркоптоза, нотоедроза и демодекоза – заболявания, които са известни под името „кожна краста“.
+                        причиняват ушна краста (отодектоза), а кожните кърлежи (саркопти, нотоедри и демодекс) -
+                        саркоптоза, нотоедроза и демодекоза - заболявания, които са известни под името „кожна краста“.
                         (Виж: <a href="./diseases-parasitic-ear-mites.html">Отодектоза</a>, Саркоптоза, Нотоедроза, <a href="./diseases-parasitic-demodicosis.html">Демодекоза</a>)
                     </p>
 
@@ -947,7 +947,7 @@
                     <br>
                     <p>
                         <span class="fw900 royal-blue">Но защо трябва да обезпаразитявам любимеца си ежемесечно?</span>
-                        Защото някои паразити имат т. нар. биологичен цикъл – т. е. на по-разбираем език, както едно
+                        Защото някои паразити имат т. нар. биологичен цикъл - т. е. на по-разбираем език, както едно
                         бебе става дете, тийнейджър и възрастен, то така и от едно яйце на паразит се излюпва ларва,
                         която става възрастен паразит. За този биологичен цикъл трябва време и затова оптималното време,
                         през което може този цикъл да бъде прекъснат, е през 30 дни. Разбира се, от любимец до любимец
@@ -1024,7 +1024,7 @@
                         кърлежи, въшки)</div>
                     <div class="print-page-break"></div>
                     <div class="italic"><span class="bold italic">Описание</span>: Ефикасността му срещу бълхи
-                        продължава 4 седмици, а срещу кърлежи – 2 седмици. Предпазване от увеличаване на броя на бълхите
+                        продължава 4 седмици, а срещу кърлежи - 2 седмици. Предпазване от увеличаване на броя на бълхите
                         чрез инхибиране на развитието на яйцата (овоцидна активност), лаври и какавиди (лаврицидна
                         активност), произхождащи от яйцата, снесени от възрастните бълхи в продълженир на 6 седмици след
                         прилагане.</div>
@@ -1100,7 +1100,7 @@
 
                     <p class="pimg">
                         <img src="./img/health-care/deworming-med/foresto-dogs-and-cats.png" class="img300x500">
-                    </p><div class="fw800">Foresto – противопаразитна каишка за кучета и котки</div>
+                    </p><div class="fw800">Foresto - противопаразитна каишка за кучета и котки</div>
                     <div class="italic"><span class="bold italic">Съдържа</span>: imidacloprid, flumethrin</div>
                     <div class="italic"><span class="bold italic">Действие</span>: срещу външни паразити (бълхи и
                         кърлежи)</div>
@@ -1112,7 +1112,7 @@
 
                     <p class="pimg">
                         <img src="./img/health-care/deworming-med/vectra-felis.jpg" class="img300x500">
-                    </p><div class="fw800">Vectra Felis – spot-on разтвор за котки</div>
+                    </p><div class="fw800">Vectra Felis - spot-on разтвор за котки</div>
                     <div class="italic"><span class="bold italic">Съдържа</span>: dinotefuran, pyriproxyfen</div>
                     <div class="italic"><span class="bold italic">Действие</span>: срешу външни паразити (бълхи)</div>
                     <div class="italic"><span class="bold italic">Описание</span>: Едно прилагане предотвратява
@@ -1164,7 +1164,7 @@
 
                     <p class="pimg">
                         <img src="./img/health-care/deworming-med/prazimec-c.jpg" class="img300x500">
-                    </p><div class="fw800">Prazimec-C – таблетки за котки</div>
+                    </p><div class="fw800">Prazimec-C - таблетки за котки</div>
                     <div class="italic"><span class="bold italic">Съдържа</span>: praziquantel, abamectin</div>
                     <div class="italic"><span class="bold italic">Действие</span>: срещу външни (бълхи, кърлежи, крастни
                         кърлежи, въшки) и вътрешни паразити (кръгли червеи, вкл. тении и дирофиларии)</div>
@@ -1180,7 +1180,7 @@
 
                     <p class="pimg">
                         <img src="./img/health-care/deworming-med/stronghold-plus-cats.jpg" class="img300x500">
-                    </p><div class="fw800">Stronghold Plus – spot-on разтвор за котки</div>
+                    </p><div class="fw800">Stronghold Plus - spot-on разтвор за котки</div>
                     <div class="italic"><span class="bold italic">Съдържа</span>: selamectin, sarolaner</div>
                     <div class="italic"><span class="bold italic">Действие</span>: срещу външни (бълхи, кърлежи, въшки)
                         и вътрешни паразити (кръгли червеи вкл. токсокари и тении)</div>
@@ -1219,7 +1219,7 @@
 
                     <p class="pimg">
                         <img src="./img/health-care/deworming-med/milpro-cat.png" class="img300x500">
-                    </p><div class="fw800">Милпро – таблетки за котки</div>
+                    </p><div class="fw800">Милпро - таблетки за котки</div>
                     <div class="italic"><span class="bold italic">Съдържа</span>: milbemycin oxime, praziquantel</div>
                     <div class=""><span class="bold ">Използва се за превенция и лечение на дирофилариоза.</span>
                         <div class="italic"><span class="bold italic">Действие</span>: срещу вътрешни паразити (плоски и
@@ -1275,7 +1275,7 @@
 
                             <p class="pimg">
                                 <img src="./img/health-care/deworming-med/panacur-pet-paste.png" class="img300x500">
-                            </p><div class="fw800">Panacur PetPaste/ Панакюр ПетПейст – перорална суспензия за кучета и
+                            </p><div class="fw800">Panacur PetPaste/ Панакюр ПетПейст - перорална суспензия за кучета и
                                 котки</div>
                             <div class="italic"><span class="bold italic">Съдържа</span>: fenbendazole</div>
                             <div class="italic"><span class="bold italic">Действие</span>: срещу вътрешни паразити
