--- a/health-care-cat-vaccination.html
+++ b/health-care-cat-vaccination.html
@@ -713,14 +713,14 @@
                         <span class="fw800">Какво е имунна система?</span> За да не остане и капка неяснота, си
                         представете държава с многобройна и силна армия, която да я защитава. Ако друга държава реши да
                         я нападне, то тя ще бъде разгромена. В този пример нашето тяло представлява тази силна държава,
-                        а войниците – това са имунната система.
+                        а войниците - това са имунната система.
                         <br>
                         Но за да бъде една армия достатъчно силна, то тя трябва не само да има многобройни войници, но и
-                        тези същите да са обучени как да се бият срещу различните врагове – с различни техники и оръжия.
-                        Както една армия трябва да се обучи, така и нашата имунна система – също.
+                        тези същите да са обучени как да се бият срещу различните врагове - с различни техники и оръжия.
+                        Както една армия трябва да се обучи, така и нашата имунна система - също.
                     </p>
                     <p>
-                        <span class="fw800">Но как се „обучава“ една имунна система?</span> Както и една армия – чрез
+                        <span class="fw800">Но как се „обучава“ една имунна система?</span> Както и една армия - чрез
                         тренировки и истински битки. Невинаги имунната система има нужда да „ходи на бойното поле“, за
                         да „тренира“. В 21. век са създадени т. нар. ваксини, които тренират или подпомагат имунната
                         система.
@@ -733,7 +733,7 @@
                     <p>
                         <span class="fw800 dark-orange">Живите ваксини</span> представляват вируси, които са толкова
                         отслабени, че не могат да причинят заболяване. Картинката става по-ясна, когато си представите
-                        немощен 92-годишен дядо, изпратен на бойното поле – невиждащ и нечуващ. Тези ваксини съдържат
+                        немощен 92-годишен дядо, изпратен на бойното поле - невиждащ и нечуващ. Тези ваксини съдържат
                         вирус или част от вирус, който бива регистриран от имунната система, която впоследствие
                         произвежда антитела (частици, които се борят срещу вируси и бактерии) и така имунната система
                         става по-силна, защото при следващ контакт на имунната система с този вирус, тя вече е изградила
@@ -759,15 +759,15 @@
                     <img src="./img/health-care/vaccination-chart.gif" class="img300x500 no-print">
                     <img src="./img/health-care/vaccination-chart.png" class="img300x500 only-for-print">
                     <p>
-                        Ваксините биват задължителни и незадължителни – първата група се поставя на всички котки и
-                        котенца, докато незадължителните – само при риск от излагане на определено заболяване.
+                        Ваксините биват задължителни и незадължителни - първата група се поставя на всички котки и
+                        котенца, докато незадължителните - само при риск от излагане на определено заболяване.
                     </p>
                     <ol><span class="fw800 red">Вирусите, срещу които задължително трябва да се ваксинират</span>
                         котенцата, са:
-                        <li>вирус на котешка панлевкопения (съкратено, FPV) – причинява котешка панлевкопения</li>
-                        <li>котешки херпесвирус (съкратено, FHV-1) – причинява котешки инфекциозен ринотрахеит</li>
-                        <li>котешки калицивирус (съкратено,FCV) – причинява котешка калицивироза</li>
-                        <li>вирус на беса (на англ. Rabies), ако котката ще пътува в ЕС – причинява бяс</li>
+                        <li>вирус на котешка панлевкопения (съкратено, FPV) - причинява котешка панлевкопения</li>
+                        <li>котешки херпесвирус (съкратено, FHV-1) - причинява котешки инфекциозен ринотрахеит</li>
+                        <li>котешки калицивирус (съкратено,FCV) - причинява котешка калицивироза</li>
+                        <li>вирус на беса (на англ. Rabies), ако котката ще пътува в ЕС - причинява бяс</li>
                     </ol>
                     <p>
                         <span class="fw800">По най-разпространената ваксинационна схема</span> у нас имунизацията на
@@ -782,13 +782,13 @@
                         провалят да индуцират имунитет поради три причини:
                     </p><div class="print-page-break"></div>
                     <br>
-                    1 – <span class="underline">Майчините антитела неутрализират</span> ваксината. Независимо от това,
+                    1 - <span class="underline">Майчините антитела неутрализират</span> ваксината. Независимо от това,
                     след последното поставяне на ваксина котенцето вече трябва да е изградило имунитет.
                     <br>
-                    2 – <span class="underline">Ваксината не е достатъчно силна</span> заради: грешки при
+                    2 - <span class="underline">Ваксината не е достатъчно силна</span> заради: грешки при
                     производството, съхранението, транспорта или инжектирането.
                     <br>
-                    3 – <span class="underline">Животното не е отговорило адекватно</span> на ваксината. То не е
+                    3 - <span class="underline">Животното не е отговорило адекватно</span> на ваксината. То не е
                     изградило антитела и следователно няма имунитет срещу съответните заболявания. Такива животни се
                     срещат с честота едно на няколко хиляди.
                     <p></p>
