--- a/health-care-dog-vaccination.html
+++ b/health-care-dog-vaccination.html
@@ -714,14 +714,14 @@
                         <span class="fw800">Какво е имунна система?</span> За да не остане и капка неяснота, си
                         представете държава с многобройна и силна армия, която да я защитава. Ако друга държава реши да
                         я нападне, то тя ще бъде разгромена. В този пример нашето тяло представлява тази силна държава,
-                        а войниците – това са имунната система.
+                        а войниците - това са имунната система.
                         <br>
                         Но за да бъде една армия достатъчно силна, то тя трябва не само да има многобройни войници, но и
-                        тези същите да са обучени как да се бият срещу различните врагове – с различни техники и оръжия.
-                        Както една армия трябва да се обучи, така и нашата имунна система – също.
+                        тези същите да са обучени как да се бият срещу различните врагове - с различни техники и оръжия.
+                        Както една армия трябва да се обучи, така и нашата имунна система - също.
                     </p>
                     <p>
-                        <span class="fw800">Но как се „обучава“ една имунна система?</span> Както и една армия – чрез
+                        <span class="fw800">Но как се „обучава“ една имунна система?</span> Както и една армия - чрез
                         тренировки и истински битки. Невинаги имунната система има нужда да „ходи на бойното поле“, за
                         да „тренира“. В 21. век са създадени т. нар. ваксини, които тренират или подпомагат имунната
                         система.
@@ -734,7 +734,7 @@
                     <p>
                         <span class="fw800 dark-orange">Живите ваксини</span> представляват вируси, които са толкова
                         отслабени, че не могат да причинят заболяване. Картинката става по-ясна, когато си представите
-                        немощен 92-годишен дядо, изпратен на бойното поле – невиждащ и нечуващ. Тези ваксини съдържат
+                        немощен 92-годишен дядо, изпратен на бойното поле - невиждащ и нечуващ. Тези ваксини съдържат
                         вирус или част от вирус, който бива регистриран от имунната система, която впоследствие
                         произвежда антитела (частици, които се борят срещу вируси и бактерии) и така имунната система
                         става по-силна, защото при следващ контакт на имунната система с този вирус, тя вече е изградила
@@ -763,26 +763,26 @@
                     <img src="./img/health-care/vaccination-chart.gif" class="img300x500 no-print">
                     <img src="./img/health-care/vaccination-chart.png" class="img300x500 only-for-print">
                     <p>
-                        Ваксините биват задължителни и незадължителни – първата група се поставя на всички кучета и
-                        кученца, докато незадължителните – само при риск от излагане на определено заболяване.
+                        Ваксините биват задължителни и незадължителни - първата група се поставя на всички кучета и
+                        кученца, докато незадължителните - само при риск от излагане на определено заболяване.
                     </p>
                     <ol><span class="fw800 red">Вирусите, срещу които задължително трябва да се ваксинират</span>
                         кученцата, са:
-                        <li>вирус на гана (съкратено, CDV) – причинява гана</li>
-                        <li>кучешки парвовирус (съкратено, CPV) – причинява парвовироза</li>
-                        <li>кучешки аденовирус (съкратено, CAV-2) – предпазва от инфекциозен хепатит (CAV-1) и кучешка
+                        <li>вирус на гана (съкратено, CDV) - причинява гана</li>
+                        <li>кучешки парвовирус (съкратено, CPV) - причинява парвовироза</li>
+                        <li>кучешки аденовирус (съкратено, CAV-2) - предпазва от инфекциозен хепатит (CAV-1) и кучешка
                             кашлица (CAV-2)</li>
-                        <li>вирус на беса (на англ. Rabies) – причинява бяс</li>
+                        <li>вирус на беса (на англ. Rabies) - причинява бяс</li>
                     </ol>
                     <br>
                     <ul>
                         Има и <span class="fw800 red">незадължителни ваксини</span>, които се правят по желание на
                         собственика и по преценка на ветеринарния лекар:
-                        <li>бордетела (Bordetella bronchiseptica) – причинява кучешка кашлица</li>
-                        <li>вирус на кучешка параинфлуенца (CpiV) – причинява кучешка кашлица</li>
-                        <li>Лептоспира (Lepto) – причинява лептоспироза</li>
-                        <li>Кучешки херпесвирус – причинява херпесвирусна инфекция</li>
-                        <li>Гъбички (Microsporum canis) – причинява дерматомикоза</li>
+                        <li>бордетела (Bordetella bronchiseptica) - причинява кучешка кашлица</li>
+                        <li>вирус на кучешка параинфлуенца (CpiV) - причинява кучешка кашлица</li>
+                        <li>Лептоспира (Lepto) - причинява лептоспироза</li>
+                        <li>Кучешки херпесвирус - причинява херпесвирусна инфекция</li>
+                        <li>Гъбички (Microsporum canis) - причинява дерматомикоза</li>
                     </ul>
                     <div class="print-page-break"></div>
                     <p>
@@ -792,13 +792,13 @@
                         <span class="bold dark-blue">Първа ваксина</span> (45-и ден, т. е. 6-седмична възраст) - тя е
                         срещу парвовироза или срещу парвовироза и гана.
                         <br>
-                        <span class="bold dark-blue">Втора ваксина</span> (8-9 седмична възраст) – срещу парвовироза,
+                        <span class="bold dark-blue">Втора ваксина</span> (8-9 седмична възраст) - срещу парвовироза,
                         гана, инфекциозен хепатит, кучешка кашлица.
                         <br>
-                        <span class="bold dark-blue">Трета ваксина</span> (12-седмична възраст) – срещу същите
+                        <span class="bold dark-blue">Трета ваксина</span> (12-седмична възраст) - срещу същите
                         заболявания, както втората ваксина, но тя е и срещу беса.
                         <br>
-                        <span class="bold dark-blue">Годишна ваксина</span> (т. нар. реваксинация) – тя се прави всяка
+                        <span class="bold dark-blue">Годишна ваксина</span> (т. нар. реваксинация) - тя се прави всяка
                         година.
                     </p>
 
@@ -810,13 +810,13 @@
                                 дребни животни (WSAVA)</a></span>, издадено през 2016 год., ваксините може да се
                         провалят да индуцират имунитет поради три причини:
                         <br>
-                        1 – <span class="underline">Майчините антитела неутрализират</span> ваксината. Независимо от
+                        1 - <span class="underline">Майчините антитела неутрализират</span> ваксината. Независимо от
                         това, след последното поставяне на ваксина кученцето вече трябва да е изградило имунитет.
                         <br>
-                        2 – <span class="underline">Ваксината не е достатъчно силна</span> заради: грешки при
+                        2 - <span class="underline">Ваксината не е достатъчно силна</span> заради: грешки при
                         производството, съхранението, транспорта или инжектирането.
                         <br>
-                        3 – <span class="underline">Животното не е отговорило адекватно</span> на ваксината. То не е
+                        3 - <span class="underline">Животното не е отговорило адекватно</span> на ваксината. То не е
                         изградило антитела и следователно няма имунитет срещу съответните заболявания. Такива животни се
                         срещат с честота едно на няколко хиляди.
                     </p>
@@ -824,8 +824,8 @@
                         За да не могат майчините антитела да неутрализират ваксината, същото това ръководство предлага
                         <span class="fw800">нова ваксинационна схема</span>, която започва между 6-а и 9-а седмици
                         според това дали майката на кученцата е била ваксинирана (т. е. дали тя има майчини антитела,
-                        които да предаде на кученцата си) – ако тя не е била ваксинирана, то те се ваксинират по-рано, а
-                        ако е била – по-късно.
+                        които да предаде на кученцата си) - ако тя не е била ваксинирана, то те се ваксинират по-рано, а
+                        ако е била - по-късно.
                         След първоначалната ваксинация следващите ваксини се поставят през интервал от 3-4 седмици до
                         навършване на 16-седмична възраст.
                         След което следва реваксинация на 26-а или 52-а седмица.
