--- a/what-for-you-breeds-dog-breed-selector.html
+++ b/what-for-you-breeds-dog-breed-selector.html
@@ -972,7 +972,7 @@
                                             </label>
                                             <label class="checkbox-container"
                                                 style="transform: translateY(0px); opacity: 1;">
-                                                <p>Енергично (30 мин – 1 час)<span></span></p>
+                                                <p>Енергично (30 мин - 1 час)<span></span></p>
                                                 <input type="checkbox" name="step-0" value="energetic">
                                                 <span class="checkmark"></span>
                                             </label>
@@ -1405,7 +1405,7 @@
                         незнанието</span>
                     <span class="very-light-blue"> как да се грижим за нашия любимец</span>
                     <span>. Този сайт е с цел да ви въведе в света на домашните любимци бързо и практично. А самото
-                        приложение – да ви облекчи в следенето на медицинските грижи на вашия четирикрак приятел.</span>
+                        приложение - да ви облекчи в следенето на медицинските грижи на вашия четирикрак приятел.</span>
 
                 </div>
             </div>
@@ -1529,7 +1529,7 @@
                 category    : "score.character.energy",
                 answers     : [
                     {   text: 'Много енергично (над 1 час дневни упражнения)'   , value: [1, 2, 3, 4, 5]    },
-                    {   text: 'Енергично (30 мин – 1 час)'                      , value: [1, 2, 3, 4, 5]    },
+                    {   text: 'Енергично (30 мин - 1 час)'                      , value: [1, 2, 3, 4, 5]    },
                     {   text: 'Спокойно (20-30 мин дневни упражнения)'          , value: [1, 2, 3, 4, 5]    },
                     {   text: 'Нямам предпочитания'                             , value: [1, 2, 3, 4, 5]    }
                 ]
