--- a/what-for-you-dog-before.html
+++ b/what-for-you-dog-before.html
@@ -1338,8 +1338,8 @@
                                         <p>15.</p>
                                     </td>
                                     <td>
-                                        <p>Липсва ли секрет от ушите и носа? (Огледайте за възможни заболявания – обилен
-                                            секрет от носа може да означава вирусно заболяване, а мръсни уши – възможна
+                                        <p>Липсва ли секрет от ушите и носа? (Огледайте за възможни заболявания - обилен
+                                            секрет от носа може да означава вирусно заболяване, а мръсни уши - възможна
                                             краста.)</p>
                                     </td>
                                     <td class="tdnowrap">
