--- a/what-for-you-cat-before.html
+++ b/what-for-you-cat-before.html
@@ -1355,8 +1355,8 @@
                             <p>15.</p>
                         </td>
                         <td>
-                            <p>Липсва ли секрет от ушите и носа? (Огледайте за възможни заболявания – обилен секрет от
-                                носа може да означава вирусно заболяване, а мръсни уши – възможна краста.)</p>
+                            <p>Липсва ли секрет от ушите и носа? (Огледайте за възможни заболявания - обилен секрет от
+                                носа може да означава вирусно заболяване, а мръсни уши - възможна краста.)</p>
                         </td>
                         <td class="tdnowrap">
                             <div class="before">
